--- a/src/content/posts/cored20rpg/armor.mdx
+++ b/src/content/posts/cored20rpg/armor.mdx
@@ -72,11 +72,11 @@ author: Антон "Palant" Палихов
 
 \- Вес (Х)
 
-ЗАМЕЧАНИЕ ДИЗАЙНЕРА. ЗАЧЕМ ВВОДИТЬ СВОЙСТВА ДОСПЕХОВ?
-
-Дополнительное преимущество такого подхода заключается в модульности правил. Всегда можно добавить дополнительные свойства. При этом, это является естественным для системы в виду наличия правил по свойствам оружия.
-
-С помощью этих ключевых слов выражаются многие особенности: см.Дополнительные свойства.
+> ЗАМЕЧАНИЕ ДИЗАЙНЕРА. ЗАЧЕМ ВВОДИТЬ СВОЙСТВА ДОСПЕХОВ?
+> 
+> Дополнительное преимущество такого подхода заключается в модульности правил. Всегда можно добавить дополнительные свойства. При этом, это является естественным для системы в виду наличия правил по свойствам оружия.
+> 
+> С помощью этих ключевых слов выражаются многие особенности: см.Дополнительные свойства.
 
 Дополнительные свойства:
 
@@ -146,13 +146,13 @@ author: Антон "Palant" Палихов
 
 **Шипованный.** Если вы владеете воинским оружием, вы можете бонусным действием атаковать шипами или лезвиями установленными на вашем доспехе или щите. Эта атака оружием ближнего боя наносит 1к4 колющего урона.
 
-Утомляющий. Даже если в бою доспех не создает особых помех движению и действиям персонажа, он все еще может быть неудобен и тяжел в постоянном ношении. При использовании доспехов с свойством Утомляющий КС марш-броска (forced march) увеличен на 5 и персонаж автоматически получает первый уровень истощения после завершения дневного перехода в таком доспехе. Если у персонажа уже был первый уровень истощения, то новый уровень истощения не добавляется.
+**Утомляющий.** Даже если в бою доспех не создает особых помех движению и действиям персонажа, он все еще может быть неудобен и тяжел в постоянном ношении. При использовании доспехов с свойством Утомляющий КС марш-броска (forced march) увеличен на 5 и персонаж автоматически получает первый уровень истощения после завершения дневного перехода в таком доспехе. Если у персонажа уже был первый уровень истощения, то новый уровень истощения не добавляется.
 
-Громоздкий. Для громоздких доспехов требуется показатель силы 9 или более. Она обычно открыта и может привлекать внимание или даже пугать окружающих, а также провоцировать использование заклинания Нагрев металла враждебными заклинателями, если она сделана из металла. Громоздкую броню нельзя спрятать от посторонних глаз, и вы не можете воспользоваться свойством "Скрытая броня", пока носите любой компонент громоздкой брони. Громоздкая броня накладывает помеху на проверки силы (атлетика) и ловкости (акробатика) для плавания, лазания, бега и подобных действий. Этих штрафов можно избежать, если ваш показатель силы выше, чем требование брони к силе.
+**Громоздкий.** Для громоздких доспехов требуется показатель силы 9 или более. Она обычно открыта и может привлекать внимание или даже пугать окружающих, а также провоцировать использование заклинания Нагрев металла враждебными заклинателями, если она сделана из металла. Громоздкую броню нельзя спрятать от посторонних глаз, и вы не можете воспользоваться свойством "Скрытая броня", пока носите любой компонент громоздкой брони. Громоздкая броня накладывает помеху на проверки силы (атлетика) и ловкости (акробатика) для плавания, лазания, бега и подобных действий. Этих штрафов можно избежать, если ваш показатель силы выше, чем требование брони к силе.
 
 **Скрывающий.** Плащи со свойством Скрывающий позволяют вам спрятать ваше лицо, форму и содержимое ваших рук. Вы получаете преимущество на проверки Скрытности (Ловкость) и Ловкости Рук (Ловкость) направленные на сокрытие вашей личности (но не присутствия) или предметов, которые вы несете в руках. Пока вы не носите громоздкий доспех, вы кажетесь окружающим бездоспешным.
 
-Подогнанные. Эти доспехи подогнаны мастерски, изношены или просто сделаны из лучших материалов. Вы получаете бонус +1к4 при любой проверке или броске спасброска, чтобы избежать истощения, пока носите эти доспехи. Это качество не распространяется на истощение, вызванное недостатком пищи или воды, а также на заклинания или сверхъестественные эффекты, вызывающие истощение.
+**Подогнанные.** Эти доспехи подогнаны мастерски, изношены или просто сделаны из лучших материалов. Вы получаете бонус +1к4 при любой проверке или броске спасброска, чтобы избежать истощения, пока носите эти доспехи. Это качество не распространяется на истощение, вызванное недостатком пищи или воды, а также на заклинания или сверхъестественные эффекты, вызывающие истощение.
 
 ### Эквиваленты доспехов
 
@@ -210,9 +210,7 @@ author: Антон "Palant" Палихов
 
 \- шипы или лезвия на доспех
 
-![Зображення, що містить ескіз, малюнок, текст, ілюстрація Автоматично згенерований опис](media/fb1748e40c01c47a364e3ae5b3ff6791.png)
-
-Рукавицы. В комплект этого доспеха входят латные рукавицы.
+**Рукавицы.** В комплект этого доспеха входят латные рукавицы.
 
 Фиксирующая рукавица.
 
@@ -222,19 +220,19 @@ author: Антон "Palant" Палихов
 
 Шлемы надеваются на голову для защиты черепа, хотя взамен они ограничивают зрение и слух. Для ношения шлема не требуется никаких навыков.
 
-Шлем (12 зм, 4 фунта). Этот жесткий кожаный или металлический кожух защищает голову, но не лицо, за исключением полоски над носом. Во время ношения шлема Вы получаете опыт при бросках на спасение, чтобы противостоять оглушению или шоку, а Ваш пассивный показатель Восприятия уменьшается на 2.
+**Шлем (12 зм, 4 фунта).** Этот жесткий кожаный или металлический кожух защищает голову, но не лицо, за исключением полоски над носом. Во время ношения шлема Вы получаете опыт при бросках на спасение, чтобы противостоять оглушению или шоку, а Ваш пассивный показатель Восприятия уменьшается на 2.
 
-Визированный шлем (25 зм, 8 фунтов). Этот шлем закрывает всю голову, включая лицо; козырек может быть сдвинут с лица при взаимодействии с объектом, и в этом случае шлем с козырьком действует как стандартный шлем. Во время ношения шлема с козырьком Вы получаете бонус 1к4 на спасброски, чтобы противостоять очарованию, оглушению или щоку, а Ваш пассивный показатель Восприятия уменьшается на 5.
+**Визированный шлем (25 зм, 8 фунтов).** Этот шлем закрывает всю голову, включая лицо; козырек может быть сдвинут с лица при взаимодействии с объектом, и в этом случае шлем с козырьком действует как стандартный шлем. Во время ношения шлема с козырьком Вы получаете бонус 1к4 на спасброски, чтобы противостоять очарованию, оглушению или щоку, а Ваш пассивный показатель Восприятия уменьшается на 5.
 
-Большой шлем Этот тяжелый шлем защищает лучше, чем головной убор, который обычно идет в комплекте с доспехами. Он полностью закрывает голову и шею, а козырек полностью защищает лицо. Большие шлемы часто украшают декоративными плюмажами, гребнями или сложными фигурками. Ношение большого шлема вместе с комплектом средних или тяжелых доспехов дает бонус +2 к спасброскам против заклинаний и эффектов области, таких как дыхательное оружие дракона или заклинание огненного шара. Он также дает иммунитет к специальной механике дубинок и удавок. Ношение большого шлема накладывает помеху на проверки Восприятия.
+**Большой шлем.** Этот тяжелый шлем защищает лучше, чем головной убор, который обычно идет в комплекте с доспехами. Он полностью закрывает голову и шею, а козырек полностью защищает лицо. Большие шлемы часто украшают декоративными плюмажами, гребнями или сложными фигурками. Ношение большого шлема вместе с комплектом средних или тяжелых доспехов дает бонус +2 к спасброскам против заклинаний и эффектов области, таких как дыхательное оружие дракона или заклинание огненного шара. Он также дает иммунитет к специальной механике дубинок и удавок. Ношение большого шлема накладывает помеху на проверки Восприятия.
 
 **Шлем.** В комплект этого доспеха входит шлем.
 
 ### Надевание и снятие доспехов
 
-Надевание. Столько времени требуется для надевания доспеха. Вы получаете КЗ от доспеха только если потратили нужное время на его надевание.
+**Надевание.** Столько времени требуется для надевания доспеха. Вы получаете КЗ от доспеха только если потратили нужное время на его надевание.
 
-Снимание. Столько времени требуется на снятие доспеха. Если вам помогают, уменьшите время вдвое.
+**Снимание.** Столько времени требуется на снятие доспеха. Если вам помогают, уменьшите время вдвое.
 
 Надевание и снятие доспеха
 
@@ -249,13 +247,13 @@ author: Антон "Palant" Палихов
 
 Средневековые доспехи состоят из защитных слоев, которые в совокупности обеспечивают класс защиты, а также дополнительные качества для владельца. Вы можете носить по одному компоненту брони на каждом из трех слоев и по одному дополнительному компоненту на голове, руках и жизненно важных органах. Ваш класс защиты равен 10 плюс бонус КЗ, обеспечиваемый каждым надетым компонентом брони.
 
-Подкладка – это изношенная защита, непосредственно контактирующая с телом. Обычно это мягкая и плотная одежда, защищающая кожу от оружейных материалов. Эти компоненты легко прятать под гражданской одеждой и поглощать урон от мощных ударов, которым удается пробить ваш внешний доспех.
+**Подкладка** – это изношенная защита, непосредственно контактирующая с телом. Обычно это мягкая и плотная одежда, защищающая кожу от оружейных материалов. Эти компоненты легко прятать под гражданской одеждой и поглощать урон от мощных ударов, которым удается пробить ваш внешний доспех.
 
-Средний слой — это изношенная защита поверх подкладки, которая используется для смягчения большей части повреждений от удара, проникающего через накладку. Эти компоненты обеспечивают надежное снижение урона от определенных типов рукопашного урона и считаются второстепенным слоем доспехов воина.
+**Средний слой** — это изношенная защита поверх подкладки, которая используется для смягчения большей части повреждений от удара, проникающего через накладку. Эти компоненты обеспечивают надежное снижение урона от определенных типов рукопашного урона и считаются второстепенным слоем доспехов воина.
 
-Внешний слой — это изношенная защита снаружи, которую простой непрофессионал без подготовки назвал бы доспехом. Внешний слой служит непробиваемым панцирем, который останавливает большую часть силы удара. Внешний слой является основным источником класса защиты.
+**Внешний слой** — это изношенная защита снаружи, которую простой непрофессионал без подготовки назвал бы доспехом. Внешний слой служит непробиваемым панцирем, который останавливает большую часть силы удара. Внешний слой является основным источником класса защиты.
 
-Плащи — это дополнительный слой, который покрывает тело и защищает от опасностей окружающей среды, таких как дождь или снег, или обеспечивает сокрытие черт лица, одежды (включая легкий доспех) и движений рук.
+**Плащи** — это дополнительный слой, который покрывает тело и защищает от опасностей окружающей среды, таких как дождь или снег, или обеспечивает сокрытие черт лица, одежды (включая легкий доспех) и движений рук.
 
 Компоненты «Голова», «Руки» и «Жизненно-важные органы» предназначены для защиты открытой головы и конечностей, а также любых брешей в доспехах. Каждый обеспечивает небольшое покрытие, которое помогает защитить от выстрелов и открытых ран.
 
@@ -267,7 +265,7 @@ author: Антон "Palant" Палихов
 
 Размер доспехов можно изменить без ущерба для их обычных или магических свойств, используя инструменты кузнеца или кожевника, или заплатив оружейнику или кожевнику за эту услугу. Обычно на это уходит всего один день и 50 зм материалов.
 
-ОПЦИОНАЛЬНОЕ ПРАВИЛО. МНОГОСЛОЙНЫЕ ДОСПЕХИ
+### ОПЦИОНАЛЬНОЕ ПРАВИЛО. МНОГОСЛОЙНЫЕ ДОСПЕХИ
 
 С появлением легких доспехов, которые можно носить как одежду (или под одеждой), игроки не преминули задать вопрос о многослойных доспехах. Учитывая смертоносность огнестрельного оружия (особенно на низких уровнях) и уменьшение роли щитов в бою, нет ничего неразумного в том, чтобы разрешить это - в определенных пределах. Быстрое и грязное правило заключается в том, что один легкий доспех можно носить с другим костюмом любого типа, и результирующий AC будет +1 к лучшему AC двух типов брони. (Более двух слоев замедляют пользователя настолько, что отменяют любые дальнейшие преимущества). Слои должны иметь смысл... бронежилет или костюм из мягкой брони может быть надет под большинство средних или тяжелых доспехов, а тяжелый длинный плащ может быть надет почти на все, кроме энергетической брони.
 
@@ -409,7 +407,7 @@ This metal does not require magic techniques to craft, nor will the material alo
 
 **Щиты**
 
-Добавлены: баклер, тарж, маленький щит как опции для легко вооруженного пехотинца или воина.
+**Добавлены:** баклер, тарж, маленький щит как опции для легко вооруженного пехотинца или воина.
 
 Добавлены также два специфических варианта щита: башенный и павеза..
 
@@ -443,7 +441,7 @@ This metal does not require magic techniques to craft, nor will the material alo
 | Павиза            | 20       | 15          | 3                | Громоздкий, Размещаемый, Сила 13 |                       | Необычный |
 | Башенный щит      | 20       | 22          | 3                | Громоздкий, Стена щитов, Сила 15 |                       | Обычный   |
 
-**![Зображення, що містить ескіз, малюнок, Лінійне мистецтво, схема Автоматично згенерований опис](media/53b1e4250c4156e0368142d3e0a114e7.png)**
+
 
 ### Свойства щитов
 
@@ -469,7 +467,7 @@ This metal does not require magic techniques to craft, nor will the material alo
 
 Светильник. Эта термостойкая пластина и набор кронштейнов крепится на передней части щита. Это устройство можно прикрепить к любому виду щита, кроме кулачного. Оно предназначено для фиксации зажженного факела или солнечного стержня, что позволяет носителю щита держать источник света в той же руке, что и щит. Щит со светильником, не может также нести на себе священный символ или шипы щита.
 
-ОПЦИОНАЛЬНОЕ ПРАВИЛО. Блокирование и поломка щитов
+### ОПЦИОНАЛЬНОЕ ПРАВИЛО. Блокирование и поломка щитов
 
 Использование щитов получает новую возможность – персонаж может реакцией заблокировать уже попавший удар, и в этом случае урон получает не персонаж, а щит, теряя хиты своей прочности. Если урон превосходит текущее количество хитов у щита, то разницу получает персонаж.
 
@@ -499,6 +497,6 @@ This metal does not require magic techniques to craft, nor will the material alo
 
 **Глушение** - +100 зм, +5 фунтов (только легкие и средние доспехи). Добавление дополнительных накладок, подрезка стяжек и набивка некоторых швов ватой могут сделать легкие скрипучие доспехи бесшумными. Любой доспех, получивший такую обработку, может лишиться Помехи на Скрытность но его вес увеличивается на 5 фунтов.
 
-**Дополнительные пластины **- +300 зм, +(1/2 веса доспехов) фунтов (только тяжелые доспехи). Увеличение толщины пластин в тяжелых доспехах в два раза. Уменьшает весь получаемый немагический урон на 2.
+**Дополнительные пластины**- +300 зм, +(1/2 веса доспехов) фунтов (только тяжелые доспехи). Увеличение толщины пластин в тяжелых доспехах в два раза. Уменьшает весь получаемый немагический урон на 2.
 
 **Зеркальный** - +150 зм (только щиты). Зеркальный щит специально обрабатывается маслами и кислотами, в результате чего его поверхность становится полностью отражающей. Он выглядит как блестящий стальной щит, только на его поверхности нет никаких украшений или символов, а вместо этого он прекрасно отражает весь свет.
