--- a/src/content/posts/translations/gm-advice-how-to-design-a-campaign-primer.mdx
+++ b/src/content/posts/translations/gm-advice-how-to-design-a-campaign-primer.mdx
@@ -1,6 +1,6 @@
 ---
-title: Совет Мастеру: Как создать праймер кампании
-description: example
+title: "Совет Мастеру: Как создать праймер кампании"
+description: "Перевод статьи Creighton Broadhurst - Совет Мастеру: Как создать праймер кампании"
 date: 2023-09-30
 tags:
   - кампания
