--- a/src/content/posts/translations/gm-advice-how-to-design-a-campaign-primer.mdx
+++ b/src/content/posts/translations/gm-advice-how-to-design-a-campaign-primer.mdx
@@ -18,7 +18,7 @@ cover: ~assets/covers/campaign-primer-1.jpg
 Каждому кампейну нужен праймер. Он презентует основную информация о кампейне, что позволяет игрокам сформировать правильные ожидания от игры, и помогает легкодоступной информацией, которая может понадобиться в процессе генерации и развития персонажа.
 
 > [от переводчика. Я видал много развалившихся кампейнов, основная ихняя проблема была в том что
-ДМ хотел одно, придумал другое, объявил о наборе на третье, игроки увидели в сообщении четвертое, на игре было пятое, а в систему взяли шестое, с каждой сессией проблем ставало больше, потом они разругались и разбежались. В постоянных компаниях праймер замещает дружба с мастером, игрок знает <<че этот парень выкинет>>, если собраны новички, то, если вы не играете там где праймер уже дописан авторами, например в ДНД Лигу Авантюристов или Клинки в ночи, вероятность фейла и развала крайне велика. ]
+ДМ хотел одно, придумал другое, объявил о наборе на третье, игроки увидели в сообщении четвертое, на игре было пятое, а в систему взяли шестое, с каждой сессией проблем ставало больше, потом они разругались и разбежались. В постоянных компаниях праймер замещает дружба с мастером, игрок знает **че этот парень выкинет**, если собраны новички, то, если вы не играете там где праймер уже дописан авторами, например в ДНД Лигу Авантюристов или Клинки в ночи, вероятность фейла и развала крайне велика. ]
 
 Праймер является важнейшим раздаточным материалом (хендаутом) из когда либо созданных ДМом для кампейна. Он объединяет в себе первый взгляд игрока на сеттинг и чаще всего сумму всех знаний игрока о кампейне, на время создания персонажа.
 Также праймер помогает ДМу сосредоточится на важных для кампейна вещах и подать эти вещи, как эталон всем участникам.
