--- a/src/content/posts/translations/angrygm-index.mdx
+++ b/src/content/posts/translations/angrygm-index.mdx
@@ -46,6 +46,8 @@ author: Angry GM
 
 [Карты: что у вас на столе?](https://cyborgsandmages.com/posts/translations/angrygm-maps-whats-on-your-table)
 
+Иллюзии - это чушь... Но на самом деле это не так
+
 ## Советы игрокам
 
 [Представление вашего персонажа](https://cyborgsandmages.com/posts/translations/angrygm-presentation-of-your-pc)
