--- a/src/content/posts/translations/angrygm-index.mdx
+++ b/src/content/posts/translations/angrygm-index.mdx
@@ -46,7 +46,7 @@ author: Angry GM
 
 [Карты: что у вас на столе?](https://cyborgsandmages.com/posts/translations/angrygm-maps-whats-on-your-table)
 
-Иллюзии - это чушь... Но на самом деле это не так
+[Иллюзии - это чушь... Но на самом деле это не так](https://cyborgsandmages.com/posts/translations/angrygm-illusions-are-bullshit)
 
 ## Советы игрокам
 
