--- a/src/content/singles/cored20rpg.mdx
+++ b/src/content/singles/cored20rpg.mdx
@@ -6,9 +6,9 @@ description: Созданная в сообществе Киборги и Чар
 
 ## РАБОЧИЕ ФАЙЛЫ
 
-Последняя версия для печати: [Версия для публикации](https://1drv.ms/w/s!Atcrhwwo1lBA4rJxN269ggsPOOkL4g?e=Y9GmLH)
+Последняя версия для печати: [Версия для публикации](https://1drv.ms/w/s!Atcrhwwo1lBA4rJxGaAmNH6Aatr55Q?e=Na4g1N)
 
-v.0020-18092023
+v.0022-06102023
 
 ## ДОПОЛНИТЕЛЬНОЕ
 
@@ -19,6 +19,8 @@ v.0020-18092023
 [Базовые боевые приемы](https://1drv.ms/w/s!Atcrhwwo1lBA2dMyCM_VzyPoHuZPGQ?e=PQCY66)
 
 [Состояния](https://1drv.ms/w/s!Atcrhwwo1lBA2dM4es-k2Vu9fId01A?e=gtN8VU)
+
+
 
 ---
 
@@ -36,15 +38,33 @@ v.0020-18092023
 
 06. СНАРЯЖЕНИЕ
 
-07. ХАРАКТЕРИСТИКИ, НАВЫКИ, ПРОВЕРКИ
+[Доспехи и щиты](https://cyborgsandmages.com/posts/cored20rpg/armor)
 
-08. ПРИКЛЮЧЕНИЯ
+[Оружие](https://cyborgsandmages.com/posts/cored20rpg/weapons)
 
-09. СРАЖЕНИЕ
+[Огнестрельное оружие](https://cyborgsandmages.com/posts/cored20rpg/firearms)
+
+7.  ХАРАКТЕРИСТИКИ, НАВЫКИ, ПРОВЕРКИ
+
+8.  ПРИКЛЮЧЕНИЯ
+
+9.  СРАЖЕНИЕ
+
+[Отдых и лечение](https://cyborgsandmages.com/posts/cored20rpg/rests-and-healing)
 
 10. МАГИЯ
 
 11. ОПИСАНИЕ ЗАКЛИНАНИЙ
+
+[Заклинания](https://cyborgsandmages.com/posts/cored20rpg/spells)
+
+[Состояния](https://cyborgsandmages.com/posts/cored20rpg/conditions)
+
+[Действия](https://cyborgsandmages.com/posts/cored20rpg/actions)
+
+[Базовые приемы](https://cyborgsandmages.com/posts/cored20rpg/basicmaneuvers)
+
+[Свойства оружия](https://cyborgsandmages.com/posts/cored20rpg/weaponproperties)
 
 ## БЕСТИАРИЙ
 
@@ -57,4 +77,10 @@ v.0020-18092023
 ## РУКОВОДСТВО МАСТЕРА
 
 01. СОЗДАНИЕ ПРИКЛЮЧЕНИЙ
+
+02. СОЗДАНИЕ СЕТТИНГА
+
+03. ВОЖДЕНИЕ
+
+
   
