--- a/src/content/posts/translations/gritty-healing 2.mdx
+++ b/src/content/posts/translations/gritty-healing 2.mdx
@@ -14,7 +14,12 @@ tags:
 author: Скотт Тернбулл
 ---
 
-В начале недели я опубликовал некоторые правила для Gritty Healing & Survival в 5e. Они подойдут для группы, которая ищет такой вид долгосрочного управления ресурсами и игры. Однако, когда дело доходит до исцеляющих заклинаний и магии, это оставляет небольшой пробел. На самом деле, большинство механик "крутого" типа страдают от проблемы создания системы постоянных травм, а затем введения магии, позволяющей обойтись без нее. Кроме того, эта механика страдает от того, что превращает жреца в бота-целителя для партии, заставляя его выходить из игры во время столкновений, чтобы потом всех вылечить. Поэтому важно каким-то образом согласовать механику опирания с основной идеей восстановления как главного принципа дизайна. Без этого вы получите тот же эффект, что и от ночного исцеления, но заставите персонажа игрока, занимающегося лечением, сжечь все свои ресурсы и просидеть большинство встреч.
+Продолжение перевода статей Скотта Тернбулла.
+
+[Первая часть.](https://cyborgsandmages.com/posts/translations/gritty-healing)
+
+---
+В начале недели я опубликовал некоторые правила для [**Gritty Healing & Survival в 5e**](https://cyborgsandmages.com/posts/translations/gritty-healing). Они подойдут для группы, которая ищет такой вид долгосрочного управления ресурсами и игры. Однако, когда дело доходит до исцеляющих заклинаний и магии, это оставляет небольшой пробел. На самом деле, большинство механик "крутого" типа страдают от проблемы создания системы постоянных травм, а затем введения магии, позволяющей обойтись без нее. Кроме того, эта механика страдает от того, что превращает жреца в бота-целителя для партии, заставляя его выходить из игры во время столкновений, чтобы потом всех вылечить. Поэтому важно каким-то образом согласовать механику опирания с основной идеей восстановления как главного принципа дизайна. Без этого вы получите тот же эффект, что и от ночного исцеления, но заставите персонажа игрока, занимающегося лечением, сжечь все свои ресурсы и просидеть большинство встреч.
 
 Я ожидаю, что этот вариант вызовет споры. Он идет вразрез с общепринятыми представлениями о выпивании тачки, полной зелий исцеления, и делает темп и ход игры гораздо более неустойчивым.
 
@@ -46,7 +51,7 @@ author: Скотт Тернбулл
 
 ## Смешивание и сопоставление
 
-Хотя я предлагаю эту систему для правил "Жесткого исцеления и выживания", которые я опубликовал в начале недели, она может быть использована в ряде систем. Существуют другие системы крутого или медленного исцеления, с которыми можно использовать эту систему напрямую или с небольшими изменениями. Исцеление на половину КХ и исцеление только на половину максимальных хитов при длинном отдыхе, фиксированное количество хитов за отдых или любые другие системы - все это можно пропустить при обычном исцелении. Эти правила могут хорошо работать с любой из этих систем, освобождая лечащего персонажа игрока для участия в столкновении и сохраняя значимость ранений. Через несколько недель я опубликую более простую систему отслеживания ранений, с которой также можно будет работать.
+Хотя я предлагаю эту систему для правил "[Жесткого исцеления и выживания](https://cyborgsandmages.com/posts/translations/gritty-healing)", которые я опубликовал в начале недели, она может быть использована в ряде систем. Существуют другие системы крутого или медленного исцеления, с которыми можно использовать эту систему напрямую или с небольшими изменениями. Исцеление на половину КХ и исцеление только на половину максимальных хитов при длинном отдыхе, фиксированное количество хитов за отдых или любые другие системы - все это можно пропустить при обычном исцелении. Эти правила могут хорошо работать с любой из этих систем, освобождая лечащего персонажа игрока для участия в столкновении и сохраняя значимость ранений. Через несколько недель я опубликую более простую систему отслеживания ранений, с которой также можно будет работать.
 
 ## Альтернативное отслеживание
 
