--- a/src/content/posts/translations/alexandrian-index.mdx
+++ b/src/content/posts/translations/alexandrian-index.mdx
@@ -420,6 +420,10 @@ Cypher v. Fate
 
 [Вождение детективов: Нулевой результат](https://cyborgsandmages.com/posts/translations/alexandrian-running-detectives-zero-result)
 
+[Пересмотр дизайна столкновений](https://cyborgsandmages.com/posts/translations/alexandrian-revisiting-encounter-design)
+
+[Многообразие видов баланса](https://cyborgsandmages.com/posts/translations/alexandrian-the-many-types-of-balance)
+
 ## Модуль статуса кампании
 
 Модуль статуса кампании: Корреспонденция
