--- a/src/content/posts/cored20rpg/actions.mdx
+++ b/src/content/posts/cored20rpg/actions.mdx
@@ -399,3 +399,8 @@ Right before the beginning of your next round make a single ranged weapon attack
 Вы можете встать между существом и любым нападающим. Выберите существо, которое находится в пределах 5 футов от вас. Если вы предоставите этому существу укрытие, оно получит от вас укрытие на три четверти вместо половины до начала вашего следующего хода, пока оно находится в пределах 5 футов от вас.
 
 Перед началом вашего следующего хода, если существо, которое вы охраняете, движется, подвергается нападению или вынуждено совершить спасбросок Ловкости, чтобы избежать урона, вы можете реакцией переместиться на половину своей скорости в свободное место в пределах 5 ног вашего охраняемого существа. Если ваша новая позиция находится между охраняемым существом и противником, совершившим инициирующую атаку или источником вредоносного эффекта, вы предоставляете охраняемому существу укрытие на три четверти от этой атаки или эффекта.
+
+
+---
+
+[ИНДЕКС CORE D20 RPG](https://cyborgsandmages.com/cored20rpg/)
