--- a/src/content/posts/cored20rpg/armor.mdx
+++ b/src/content/posts/cored20rpg/armor.mdx
@@ -500,3 +500,8 @@ This metal does not require magic techniques to craft, nor will the material alo
 **Дополнительные пластины**- +300 зм, +(1/2 веса доспехов) фунтов (только тяжелые доспехи). Увеличение толщины пластин в тяжелых доспехах в два раза. Уменьшает весь получаемый немагический урон на 2.
 
 **Зеркальный** - +150 зм (только щиты). Зеркальный щит специально обрабатывается маслами и кислотами, в результате чего его поверхность становится полностью отражающей. Он выглядит как блестящий стальной щит, только на его поверхности нет никаких украшений или символов, а вместо этого он прекрасно отражает весь свет.
+
+
+---
+
+[ИНДЕКС CORE D20 RPG](https://cyborgsandmages.com/cored20rpg/)
