--- a/src/content/posts/cored20rpg/basicmaneuvers.mdx
+++ b/src/content/posts/cored20rpg/basicmaneuvers.mdx
@@ -379,3 +379,8 @@ author: Антон "Palant" Палихов
 Вы можете совершать атаки щитом, используя его как простое оружие, которое наносит 1к4 дробящего уроа при попадании.
 
 При использовании щита как оружия он не добавляет бонус к КЗ.
+
+
+---
+
+[ИНДЕКС CORE D20 RPG](https://cyborgsandmages.com/cored20rpg/)
