--- a/src/content/posts/cored20rpg/conditions.mdx
+++ b/src/content/posts/cored20rpg/conditions.mdx
@@ -629,3 +629,8 @@ The condition ends immediately when the creature is no longer within 5’ of an 
 ### Враждебен
 
 ### Ненавидим
+
+
+---
+
+[ИНДЕКС CORE D20 RPG](https://cyborgsandmages.com/cored20rpg/)
