--- a/src/content/posts/cored20rpg/firearms.mdx
+++ b/src/content/posts/cored20rpg/firearms.mdx
@@ -350,3 +350,8 @@ FLINTLOCK Кремневое оружие
 **Нарезной ствол**
 
 **Револьверный механизм**
+
+
+---
+
+[ИНДЕКС CORE D20 RPG](https://cyborgsandmages.com/cored20rpg/)
