--- a/src/content/posts/cored20rpg/rests-and-healing.mdx
+++ b/src/content/posts/cored20rpg/rests-and-healing.mdx
@@ -309,3 +309,8 @@ author: Антон "Palant" Палихов
 \*\*\* Помимо восстанавливаемых хитов за счет отдыха, во время отдыха персонаж может потратить также свои Кости Хитов на восстановление Хитов.
 
 \*\* в дополнение к хитам восстановленным за 5 длинных отдыхов, входящих в один продолжительный
+
+
+---
+
+[ИНДЕКС CORE D20 RPG](https://cyborgsandmages.com/cored20rpg/)
