--- a/src/content/posts/cored20rpg/spells.mdx
+++ b/src/content/posts/cored20rpg/spells.mdx
@@ -2405,3 +2405,10 @@ author: Антон "Palant" Палихов
 Ваша цель приходит в ярость. На время действия заклинания цель получает бонус +2 ко всем атакам и броскам урона и получает 10 временных хитов. Когда заклинание заканчивается, цель получает один уровень истощения. Если вы произносите это заклинание про себя, то сохраняете концентрацию, как обычно, даже если в ярости вы не можете сохранять концентрацию.
 
 **Используя более высокий круг.** За каждый круг ячейки выше 2-го это заклинание воздействует на еще одну цель, которой необходимо коснутся частью действия, использованного для его сотворения.
+
+
+
+---
+
+[ИНДЕКС CORE D20 RPG](https://cyborgsandmages.com/cored20rpg/)
+
