--- a/src/content/posts/cored20rpg/weaponproperties.mdx
+++ b/src/content/posts/cored20rpg/weaponproperties.mdx
@@ -85,3 +85,8 @@ author: Антон "Palant" Палихов
 **Оглушение.**
 
 **Зацеп.**
+
+
+---
+
+[ИНДЕКС CORE D20 RPG](https://cyborgsandmages.com/cored20rpg/)
