--- a/src/content/posts/cored20rpg/weapons.mdx
+++ b/src/content/posts/cored20rpg/weapons.mdx
@@ -325,3 +325,9 @@ author: Антон "Palant" Палихов
 ### Мастерски изготовленные боеприпасы
 
 Мастерски изготовленные боеприпасы обладают улучшенными аэродинамическими свойствами и дают бонус +1 к урону. Стоимость мастерски изготовленных боеприпасов составляет 10 зм за 1 ед.
+
+
+---
+
+[ИНДЕКС CORE D20 RPG](https://cyborgsandmages.com/cored20rpg/)
+
