--- a/src/content/singles/cored20rpg.mdx
+++ b/src/content/singles/cored20rpg.mdx
@@ -44,6 +44,8 @@ v.0022-06102023
 
 [Огнестрельное оружие](https://cyborgsandmages.com/posts/cored20rpg/firearms)
 
+[Алхимические товары и инструменты](https://cyborgsandmages.com/posts/cored20rpg/alchemical-items-and-substances)
+
 7.  ХАРАКТЕРИСТИКИ, НАВЫКИ, ПРОВЕРКИ
 
 8.  ПРИКЛЮЧЕНИЯ
