--- a/src/content/singles/cored20rpg.mdx
+++ b/src/content/singles/cored20rpg.mdx
@@ -98,5 +98,85 @@ v.0022-06102023
 
 03. ВОЖДЕНИЕ
 
+## СПИСОК ИЗМЕНЕНИЙ
+
+### 18.09.2023
+
+Добавлен раздел Создание персонажа
+
+Добавлены черновые версии предысторий
+
+Добавлены черновые версии классов и 
+архетипов
+
+Внесены дополнительные изменения в 
+
+Снаряжение
+
+Добавлены черновые версии заклинаний
+
+Отредактированы состояния
+
+Отредактированы базовые приемы
+
+Отредактированы проверки навыков
+
+Добавлены и отредактированы черты
+
+Обновлен список приложений
+
+Сформирован список справочных документов
+
+### 27.09.2023
+
+Добавлены заклинания
+
+Расширен перечень предысторий
+
+Добавлен архетип бойца Мастер Битвы
+
+Расширено описание Что такое класс
+
+### 28.09.2023
+
+Добавлены заклинания
+
+Добавлен подвид Концентрации – Боевая 
+концентрация
+
+### 06.10.2023
+
+Немного доработан раздел снаряжения.
+
+Добавлены заклинания.
+
+В файл Core d20 RPG внесены все домашние правила используемые в кампании **Кормир - Хроники Авантюристов**
+
+Добавлено снаряжение авантюриста
+
+Добавлено про мастерское оружие.
+
+Добавлено оружие.
+
+Добавлен подраздел Алхимические товары и 
+инструменты
+
+Добавлены деятельности простоя
+
+Добавлен раздел Травничество
+
+Добавлены стрелы в подраздел Аммуниция
+
+Добавлены верховые животные
+
+Добавлен наземный транспорт
+
+Добавлен водный транспорт
+
+Добавлен раздел правил про длительные травмы
+
+Обновлен файл CORED20.XLSX
+
+Необходимо свести воедино подразделы Алхимические товары и инструменты и Особые субстанции
 
   
