--- a/src/content/posts/core-d20/alternate-rules-potions-of-healing.mdx
+++ b/src/content/posts/core-d20/alternate-rules-potions-of-healing.mdx
@@ -40,3 +40,12 @@ tags:
 
 Кроваво-алая жидкость в прозрачной колбе. Еще более усиленная версия зелья лечения за счет использования намного более редких трав и ингредиентов. Зелье максимального лечения можно выпить действием, если оно находилось в рюкзаке или другом подобном месте, или бонусным действием если оно было закреплено в пределах быстрой досягаемости (например, на перевязи на теле. Выпитое зелье лечения восстанавливает 10к4+20 хитов и позволяет персонажу потратить свои кости хитов для восстановления хитов, при этом целебный эффект зелья увеличивает и эффективность костей хитов -каждая потраченная кость хитов на восстановление дополнительно восстанавливает 5 хитов.
 К сожалению, тонизирующий эффект зелья не позволяет использовать более одного зелья без совершения отдыха, а более мощных лечебных зелий пока еще не придумали.
+
+
+---
+
+[СТРАНИЦА CORE D20 RPG](https://cyborgsandmages.com/cored20rpg/)
+
+[ИНДЕКС CORE D20 RPG](https://cyborgsandmages.com/cored20rpg/1)
+
+[СТАТЬИ СВЯЗАННЫЕ С РАЗРАБОТКОЙ CORE D20 RPG](https://cyborgsandmages.com/core-d20/1)
