--- a/src/content/posts/cored20rpg/alchemical-items-and-substances.mdx
+++ b/src/content/posts/cored20rpg/alchemical-items-and-substances.mdx
@@ -1,7 +1,7 @@
 ---
 title: Алхимические товары и инструменты
 description: Алхимические товары и инструменты
-date: 2023-10-06
+date: 2023-01-01
 tags:
   - Алхимия
   - D&D 5e
@@ -299,6 +299,11 @@ tags:
 
 **Уверенная хватка**: (5 доз). Это липкое вещество наносится на руки (а иногда и на ноги), чтобы обеспечить лучшее сцепление. Оно дает преимущество при проверках, улучшенных за счет более плотного захвата, например, при лазании и проверке равновесия, а также при захвате и спасении от обезоруживания. Одно применение действует в течение часа.
 
+
 ---
 
-[ИНДЕКС CORE D20 RPG](https://cyborgsandmages.com/cored20rpg/)
+[СТРАНИЦА CORE D20 RPG](https://cyborgsandmages.com/cored20rpg/)
+
+[ИНДЕКС CORE D20 RPG](https://cyborgsandmages.com/cored20rpg/1)
+
+[СТАТЬИ СВЯЗАННЫЕ С РАЗРАБОТКОЙ CORE D20 RPG](https://cyborgsandmages.com/core-d20/1)
