--- a/src/content/posts/cored20rpg/armor.mdx
+++ b/src/content/posts/cored20rpg/armor.mdx
@@ -502,6 +502,11 @@ This metal does not require magic techniques to craft, nor will the material alo
 **Зеркальный** - +150 зм (только щиты). Зеркальный щит специально обрабатывается маслами и кислотами, в результате чего его поверхность становится полностью отражающей. Он выглядит как блестящий стальной щит, только на его поверхности нет никаких украшений или символов, а вместо этого он прекрасно отражает весь свет.
 
 
+
 ---
 
-[ИНДЕКС CORE D20 RPG](https://cyborgsandmages.com/cored20rpg/)
+[СТРАНИЦА CORE D20 RPG](https://cyborgsandmages.com/cored20rpg/)
+
+[ИНДЕКС CORE D20 RPG](https://cyborgsandmages.com/cored20rpg/1)
+
+[СТАТЬИ СВЯЗАННЫЕ С РАЗРАБОТКОЙ CORE D20 RPG](https://cyborgsandmages.com/core-d20/1)
