--- a/src/content/posts/cored20rpg/conditions.mdx
+++ b/src/content/posts/cored20rpg/conditions.mdx
@@ -631,6 +631,11 @@ The condition ends immediately when the creature is no longer within 5’ of an 
 ### Ненавидим
 
 
+
 ---
 
-[ИНДЕКС CORE D20 RPG](https://cyborgsandmages.com/cored20rpg/)
+[СТРАНИЦА CORE D20 RPG](https://cyborgsandmages.com/cored20rpg/)
+
+[ИНДЕКС CORE D20 RPG](https://cyborgsandmages.com/cored20rpg/1)
+
+[СТАТЬИ СВЯЗАННЫЕ С РАЗРАБОТКОЙ CORE D20 RPG](https://cyborgsandmages.com/core-d20/1)
