--- a/src/content/posts/cored20rpg/actions.mdx
+++ b/src/content/posts/cored20rpg/actions.mdx
@@ -401,6 +401,11 @@ Right before the beginning of your next round make a single ranged weapon attack
 Перед началом вашего следующего хода, если существо, которое вы охраняете, движется, подвергается нападению или вынуждено совершить спасбросок Ловкости, чтобы избежать урона, вы можете реакцией переместиться на половину своей скорости в свободное место в пределах 5 ног вашего охраняемого существа. Если ваша новая позиция находится между охраняемым существом и противником, совершившим инициирующую атаку или источником вредоносного эффекта, вы предоставляете охраняемому существу укрытие на три четверти от этой атаки или эффекта.
 
 
+
 ---
 
-[ИНДЕКС CORE D20 RPG](https://cyborgsandmages.com/cored20rpg/)
+[СТРАНИЦА CORE D20 RPG](https://cyborgsandmages.com/cored20rpg/)
+
+[ИНДЕКС CORE D20 RPG](https://cyborgsandmages.com/cored20rpg/1)
+
+[СТАТЬИ СВЯЗАННЫЕ С РАЗРАБОТКОЙ CORE D20 RPG](https://cyborgsandmages.com/core-d20/1)
