--- a/src/content/posts/cored20rpg/firearms.mdx
+++ b/src/content/posts/cored20rpg/firearms.mdx
@@ -352,6 +352,11 @@ FLINTLOCK Кремневое оружие
 **Револьверный механизм**
 
 
+
 ---
 
-[ИНДЕКС CORE D20 RPG](https://cyborgsandmages.com/cored20rpg/)
+[СТРАНИЦА CORE D20 RPG](https://cyborgsandmages.com/cored20rpg/)
+
+[ИНДЕКС CORE D20 RPG](https://cyborgsandmages.com/cored20rpg/1)
+
+[СТАТЬИ СВЯЗАННЫЕ С РАЗРАБОТКОЙ CORE D20 RPG](https://cyborgsandmages.com/core-d20/1)
