--- a/src/content/posts/cored20rpg/rests-and-healing.mdx
+++ b/src/content/posts/cored20rpg/rests-and-healing.mdx
@@ -311,6 +311,11 @@ author: Антон "Palant" Палихов
 \*\* в дополнение к хитам восстановленным за 5 длинных отдыхов, входящих в один продолжительный
 
 
+
 ---
 
-[ИНДЕКС CORE D20 RPG](https://cyborgsandmages.com/cored20rpg/)
+[СТРАНИЦА CORE D20 RPG](https://cyborgsandmages.com/cored20rpg/)
+
+[ИНДЕКС CORE D20 RPG](https://cyborgsandmages.com/cored20rpg/1)
+
+[СТАТЬИ СВЯЗАННЫЕ С РАЗРАБОТКОЙ CORE D20 RPG](https://cyborgsandmages.com/core-d20/1)
