--- a/src/content/posts/cored20rpg/weapons.mdx
+++ b/src/content/posts/cored20rpg/weapons.mdx
@@ -329,5 +329,8 @@ author: Антон "Palant" Палихов
 
 ---
 
-[ИНДЕКС CORE D20 RPG](https://cyborgsandmages.com/cored20rpg/)
+[СТРАНИЦА CORE D20 RPG](https://cyborgsandmages.com/cored20rpg/)
 
+[ИНДЕКС CORE D20 RPG](https://cyborgsandmages.com/cored20rpg/1)
+
+[СТАТЬИ СВЯЗАННЫЕ С РАЗРАБОТКОЙ CORE D20 RPG](https://cyborgsandmages.com/core-d20/1)
