--- a/src/content/singles/resources.mdx
+++ b/src/content/singles/resources.mdx
@@ -38,6 +38,18 @@ Core d20 RPG - это проект по написанию набора прав
 
 Подробнее - смотри в разделе [Статьи по Core d20 RPG](https://cyborgsandmages.com/core-d20/1), а также [Страница проекта Core d20 RPG](https://cyborgsandmages.com/cored20rpg)
 
+[СТРАНИЦА CORE D20 RPG](https://cyborgsandmages.com/cored20rpg/)
+
+<Link id="cored20rpg/" />
+
+[ИНДЕКС CORE D20 RPG](https://cyborgsandmages.com/cored20rpg/1)
+
+<Link id="cored20rpg/1" />
+
+[СТАТЬИ СВЯЗАННЫЕ С РАЗРАБОТКОЙ CORE D20 RPG](https://cyborgsandmages.com/core-d20/1)
+
+<Link id="core-d20/1" />
+
 ### Зачем мы это делаем?
 
 Во-первых, существующие правила не покрывают всего многообразия ситуаций с которыми сталкивается мастер.
@@ -90,7 +102,8 @@ Core d20 RPG - это проект по написанию набора прав
 Зачем вообще защищать этот город, у меня хватает денег переехать в любой другой, да и ситуация тут напряженная, то одна проблема, то другая, может то что, я тут родился, рос, влюбился и сыграл свадьбу, купил домик, что тут живут мои родители, и тетя Хавилар, у которой на чердаке мы играли в детстве, и булочная,которая снабжает нас ароматной выпечкой постоянно, и ее владелец проявляющий замашки крохобора, но тающий сердцем и понимающий голиаф Маверик, помогавший нам, когда мы несколько лет подряд были на мели. Это вот все падет под испепеляющей яростью и отравляющими воздух амбициями. Черепа будут растоптано, длинные языки прибиты к доскам объявлений, и книги сожжены. Может это поможет мне найти мотивацию взять в руки меч, и в рядах сотоварищей выйти на битву? Если у вас еще нет собрания предысторий Лиги Авантюристов, то держите.
 
 
-В данном документе собраны все опциональные предыстории, которые выходили начиная с первого сезона Лиги Авантюристов а также альтернативные свойства / связи / умения, которые предлагаются в приключениях - альтернативные умения предысторий в Тирании Драконов и Из Бездны, дополнительные связи для персонажей из Мулмастера или Хиллсфара, предыстории из недавно вышедших приключений Guild Adept - Еретик, Детектив. 
+В данном документе собраны все опциональные предыстории, которые выходили начиная с первого сезона Лиги Авантюристов а также альтернативные свойства / связи / умения, которые предлагаются в приключениях - альтернативные умения предысторий в Тирании Драконов и Из Бездны, дополнительные связи для персонажей из Мулмастера или Хиллсфара, предыстории из недавно вышедших приключений Guild Adept - Еретик, Детектив.
+
 [Собрание предысторий Лиги Авантюристов 0.97 - скачать](/files/downloads/al-backgrounds-compendium-097.pdf)
 
 [Собрание предысторий Лиги Авантюристов 1.01 - скачать](/files/downloads/al-backgrounds-compendium-101.pdf)
@@ -199,6 +212,8 @@ Core d20 RPG - это проект по написанию набора прав
 
 [Sphere Cube Cone: Spell ](https://www.drivethrurpg.com/product/321159/Sphere-Cube-Cone-Spell-Template?affiliate_id%253D759617)
 
+Одного разу на дорозі ...
+
 
 ## Прочие наши материалы и Проекты
 
@@ -256,7 +271,8 @@ Core d20 RPG - это проект по написанию набора прав
 
 ### Кормир
 
-### Создатель чудовищ
+
+## Создатель чудовищ
 
 [Создатель чудовищ](https://monstermaker.cyborgsandmages.com/)
 
@@ -266,3 +282,6 @@ Core d20 RPG - это проект по написанию набора прав
 
 В проекте принимали участие: Palant, JunkTurkey, Phenomen
 
+---
+
+[Индекс статей по работе сайта](https://cyborgsandmages.com/posts/articles/docs-index)
