--- a/src/content/singles/resources.mdx
+++ b/src/content/singles/resources.mdx
@@ -207,7 +207,7 @@ Core d20 RPG - это проект по написанию набора прав
 
 [Sphere Cube Cone: Spell ](https://www.drivethrurpg.com/product/321159/Sphere-Cube-Cone-Spell-Template?affiliate_id%253D759617)
 
-Одного разу на дорозі ...
+[Одного разу на дорозі ...](https://www.drivethrurpg.com/product/454651/---?affiliate_id=759617)
 
 
 ## Прочие наши материалы и Проекты
