--- a/src/content/posts/translations/alexandrian-index.mdx
+++ b/src/content/posts/translations/alexandrian-index.mdx
@@ -289,7 +289,7 @@ tags:
 
 Случайное миростроение – Фантастические нации
 
-Случайное миростроение: Быстрое и яростное создание своего мира
+[Случайное миростроение: Быстрое и яростное создание своего мира](https://cyborgsandmages.com/posts/translations/alexandrian-random-worldbuilding-fast-furious-homebrewing)
 
 ## Грамотная подготовка
 
@@ -429,6 +429,8 @@ Cypher v. Fate
 Модуль статуса кампании: Обновление списков
 
 Модуль статуса кампании: Статус подземелья
+
+Модуль статуса кампании: Последствия событий
 
 ## Рулинги на практике
 
